--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Flappy</title>
+    <link rel="shortcut icon" href="./cro_mps_icon.ico" />
+    <title>Dino King</title>
 </head>
 <body>
     <canvas id="canvas" width="512" height="256"></canvas>
