dos personajes en la misma pantalla, los botones aún no sirven

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <title>Dino King</title>
 </head>
 <body>
-    <canvas id="canvas" width="512" height="256"></canvas>
+    <canvas id="canvas" width="512" height="256"></canvas> <br>
+    <button id="p1">Un jugador</button>
+    <button id="p2">Dos jugadores</button>
     
     <script src="main.js"></script>
 </body>
